footer alignment fix

--- a/src/index.css
+++ b/src/index.css
@@ -1158,7 +1158,7 @@ body {
   gap: 20px;
   padding: 10px;
   width: 208px;
-  text-align: center;
+  margin: auto;
   
 }
 
